ajuste do tipo de variável